; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_ixp4xx_hss.c_queue_put_desc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_ixp4xx_hss.c_queue_put_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.desc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, %struct.desc*)* @queue_put_desc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @queue_put_desc(i32 %0, i32 %1, %struct.desc* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.desc*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store %struct.desc* %2, %struct.desc** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.desc*, %struct.desc** %6, align 8
  %9 = call i32 @debug_desc(i32 %7, %struct.desc* %8)
  %10 = load i32, i32* %5, align 4
  %11 = and i32 %10, 31
  %12 = call i32 @BUG_ON(i32 %11)
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @qmgr_put_entry(i32 %13, i32 %14)
  ret void
}

declare dso_local i32 @debug_desc(i32, %struct.desc*) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @qmgr_put_entry(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
